src/test/ui/enum/issue-67945-1.stderr
error[E0308]: mismatched types
  --> $DIR/issue-67945-1.rs:3:20
   |
LL | enum Bug<S> {
   |          - this type parameter
LL |     Var = {
LL |         let x: S = 0;
   |                -   ^ expected type parameter `S`, found integer
   |                |
   |                expected due to this
   |
   = note: expected type parameter `S`
                        found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
