src/test/ui/enum/issue-67945-1.rs
enum Bug<S> {
    Var = {
        let x: S = 0; //~ ERROR: mismatched types
        0
    },
}

fn main() {}
